# rust-discord-bot

./: .gitignore  README.md
rust-discord-bot/: Cargo.toml
rust-discord-bot/src/: main.rs
rust-discord-bot/src/commands/: meta.rs  mod.rs  quote.rs
