[package]
name = "rust-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dependencies.tokio]
version = "1.23"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.11.5"
features = ["cache", "framework", "standard_framework", "rustls_backend"]